<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.justjava.MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/personName"
        android:hint="Name"
        android:inputType="textCapWords"
        android:layout_marginBottom="16sp"/>


    <TextView
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_marginTop="16sp"
        android:paddingLeft="24dp"
        android:textSize="16dp"
        android:text="@string/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_marginTop="16sp"
        android:paddingLeft="24dp"
        android:textSize="16dp"
        android:text="Chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_text"
        android:layout_marginBottom="16sp"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:width="48dp"
            android:height="48dp"
            android:id="@+id/decrement"
            android:onClick="decrementQuantity"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:id="@+id/increment"
            android:layout_marginLeft="8dp"
            android:onClick="incrementQuantity"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/order_summary_text_view"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/order_summary_view"
        android:text="$0"
        android:layout_marginTop="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_button"
        android:id="@+id/order_button"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"/>
</LinearLayout>
